<resources>
    <string name="app_name">Service Genie</string>
    <string name="facebook_app_id">445340349536589</string>
    <string name="fb_login_protocol_scheme">fb445340349536589</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="livemAppLink">service-genie.xyz</string>
    <string name="msgMandatoryupdate">Your application version is outdated, please update it from the store…</string>
    <string name="msgNonMandatoryupdate">There is a new update available for GoTasker Provider. Please click on the UPDATE button to download the most current version!</string>
    <string name="or">OR</string>
    <string name="ors">Or</string>
    <string name="dummy_date">8 Aug 2017</string>
    <string name="dummy_time">6:40 PM</string>
    <string name="confirm">Confirm</string>
    <string name="trusted_services_delivered">Trusted Services. Delivered</string>
    <string name="beauticians_to_yoga_trainers">Beauticians to Yoga Trainers, Plumbers to Photographers - get 60+ services</string>
    <string name="get_started">Get Started</string>
    <string name="dummy_name">Sara Francis</string>
    <string name="dummy_email">sarafrancis@gmail.com</string>
    <string name="dummy_phone">1997823091</string>
    <string name="dummy_text">English, Maths, Science</string>
    <string name="dummy_distance">2 Miles Away</string>
    <string name="dummy_price">$ 250.00</string>
    <string name="share">Share</string>
    <string name="per_hour">Per hour</string>
    <string name="choose_time_slots">Choose Time Slots</string>
    <string name="dummy_text_lorem">Check job details</string>
    <string name="dummy_text_lorem_small">Check job details</string>
    <string name="about_me_hint">We would like to know a few more about you</string>
    <string name="about_me">About Me</string>
    <string name="languages_i_know">Languages I know</string>
    <string name="hire">Hire</string>
    <string name="job_photos">Job photos</string>
    <string name="reviews">Reviews</string>
    <string name="reviewsAndRating">Ratings &amp; Reviews</string>
    <string name="youravgrating">Your average ratings</string>
    <string name="rating">Ratings</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_payment">Select payment method</string>
    <string name="select_lang">Select Language</string>
    <string-array name="dummy_array">
        <item>All</item>
        <item>Tutor</item>
        <item>Cleaners</item>
        <item>Doctors</item>
    </string-array>
    <string name="err_uname">Username cannot be empty!</string>
    <string name="err_password">Password cannot be empty!</string>
    <string name="err_email">Email cannot be empty!</string>
    <string name="err_mobile">Mobile no cannot be empty!</string>
    <string name="googleClientIsNotConnected">Not able to connect google account, please try again!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile_sp">Profile  </string>
    <string name="wait_change_password">Change Password</string>
    <string name="PasswordShouldBeSame">Password should be same</string>
    <string name="err_fname">Enter first name.</string>
    <string name="err_lname">Enter last name.</string>
    <string name="err_invalid_email">Not a valid email!</string>
    <string name="err_mobile_invalid">Not a valid mobile no!</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_email">Invalid Email!</string>
    <string name="invalid_mobile">Invalid Mobile!</string>
    <string name="invalid_password">Password should consist of a capital letter, a small letter, a number &amp; minimum of 7 characters!</string>
    <string name="pls_select_later_time">Please select a future time, atleast 30 min from now for later booking</string>
    <string name="receipt">Receipt</string>
    <string name="rate_your_provider">Rate your experience</string>
    <string name="close">close</string>
    <string name="add_a_comment">Add a comment !</string>
    <string name="your_average_ratings">Your average ratings   |  </string>
    <string name="menu_profile">PROFILE</string>
    <string name="menu_my_projects">MY PROJECTS</string>
    <string name="menu_services">SERVICES</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="d_o_b">D.O.B</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="view_all">View All</string>
    <string name="your_location">YOUR LOCATION</string>
    <string name="allow_location">Allow Location access</string>
    <string name="location_hint">Your Location will help us to find professionals who serve in the area.</string>
    <string name="enable_loc">Enable Location</string>
    <string name="manual_loc">Enter manually</string>
    <string name="search_for_service"><font size="14">Search for a service</font></string>
    <string name="verify">Verify</string>
    <string name="resendcode">Resend code</string>
    <string name="helpwithpassword">Help with password ?</string>
    <string name="signin_login">Login</string>
    <string name="verify_phone">Verify phone number</string>
    <string name="donthaveanAccount">Don\'t have an account !</string>
    <string name="signup">Signup</string>
    <string name="next">Next</string>
    <string name="forgot_password">Help with Password</string>
    <string name="prompt_password">Password !</string>
    <string name="prompt_email">Your email or phone number ?</string>
    <string name="loginwithfacebook">login with facebook</string>
    <string name="or_small">or</string>
    <string name="or_small_1">or,</string>
    <string name="yourname">Name</string>
    <string name="yourfirst_name">First Name</string>
    <string name="yourlast_name">Last Name</string>
    <string name="your_email">Email</string>
    <string name="your_password">Password</string>
    <string name="your_new_password">New password</string>
    <string name="referral_code">Referral Code</string>
    <string name="termsAndConditionclick">By clicking on signup I agree to the Privacy Policy and Terms &amp; Conditions</string>
    <string name="termsAndCondition">Terms &amp; Conditions</string>
    <string name="privacyPolicy">Privacy Policy</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="we_sent_4_digit">Please enter the verification code that has been sent to your registered mobile phone number</string>
    <string name="forgotpwd_header_text">Enter your mobile  number / email address and you will get a verification code / link to reset password.</string>
    <string name="email_addr">Email address</string>
    <string name="add_card">+Add card</string>
    <string name="your_addresses">Your Addresses</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_address">Add Address</string>
    <string name="No_AddressSaved">There is no saved address, add one</string>
    <string name="wait_adding_address">Adding address…</string>
    <string name="wait_editing_address">Editing address…</string>
    <string name="wait_validating_promo">Validating promo code…</string>
    <string name="areYouSureYouWantOTDelete">Are you sure you want to delete this address ?</string>
    <string name="areYouSureYouWantOTDeleteImage">Are you sure you want to delete this Image ?</string>
    <string name="areYouSureYouWantOTHire">Are you certain to hire</string>
    <string name="forThisJob">for this job?</string>
    <string name="wait_guest_login">Guest Login</string>
    <string name="cant_cancel">Sorry! we can not process your request</string>
    <string name="login_with_google">Login with google</string>
    <string name="set_location">Set job location</string>
    <string name="skip">SKIP</string>
    <string name="location">LOCATION</string>
    <string name="house_flat_no">HOUSE/FLAT NO.</string>
    <string name="landmark">LANDMARK</string>
    <string name="save_as">SAVE AS</string>
    <string name="saved_Address">Saved address</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="work">Work</string>
    <string name="other">Other</string>
    <string name="save_proceed">SAVE AND PROCEED</string>
    <string name="noaddressavailable">No address available please add a new address.</string>
    <string name="delete">Delete</string>
    <string name="other_tag_hint">e.g.: Dad\'s Place\, John\'s Home</string>
    <string name="want_to_delete">Are you sure you want to delete this card?</string>
    <string name="change_pwd_txt">Mobile number Verified.\n Enter your new Password</string>
    <string name="new_password">New password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="continue_txt">Continue</string>
    <string name="verification_success">Verification successful</string>
    <string name="add_a_photo">Add a photo</string>
    <string name="takephoto">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="remove_photo">Remove Photo</string>
    <string name="Countrypicker">Country Picker</string>
    <string name="signup_with_google">Signup with google</string>
    <string name="signup_with_facebook">signup with facebook</string>
    <string name="invalid_empty_email">Invalid/empty Email address!</string>
    <string name="invalid_empty_phone">Invalid/empty Phone Number!</string>
    <string name="headRatingApp">Rate Us</string>
    <string name="msgRatingApp">If you are enjoy our app, please take a moment to rate us!</string>
    <string name="noThanks">No thanks</string>
    <string name="remindLater">Remind me later</string>
    <string name="rateNow">Rate now</string>
    <string name="emailEditInfo">We will send a verification link to this email address. Post verification, it will be added to your account.</string>
    <string name="mobilEditInfo">enter the new mobile number and you will get a verification code to reset.</string>
    <string name="changeEmail">Change email</string>
    <string name="changePhone">Change phone number</string>
    <string name="phoneNumnber">Phone number</string>
    <string name="old_password">Old password</string>
    <string name="rate_store">Rate us on Google Play</string>
    <string name="like_us_facebook">Like us on facebook</string>
    <string name="legal">Legal</string>
    <string name="lsp_website">service-genie.xyz</string>
    <string name="about">About Service Genie</string>
    <string name="supportFragment">Support</string>
    <string name="faq">FAQ</string>
    <string name="wait_faq">Fetching FAQ</string>
    <string name="looking_for_a_provider">Looking for a Provider</string>
    <string name="bulletText">●</string>
    <string name="view_profile">View profile</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="hour">HOUR</string>
    <string name="help_problemWithCanFe">Problem with cancellation fee</string>
    <string name="help_InvolvedAccident">I was involved in an accident</string>
    <string name="help_refund">I would like a refund</string>
    <string name="help_lost_item">I lost an item</string>
    <string name="help_DifferentIssue">I had a different issue</string>
    <string name="help_unprofessional">My provider was unprofessional</string>
</resources>