<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="@dimen/dimen_3dp">


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/tvBulletIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bulletText"
            android:layout_gravity="center_vertical"/>
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/imageIconMeta"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/app_name" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvLangExpertise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_me"
        android:textColor="@color/black_john"
        android:textSize="@dimen/textSize_14sp"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginRight="@dimen/app_margin"
        android:layout_gravity="center"
        android:gravity="center_vertical"/>

</LinearLayout>