<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:layout_marginLeft="@dimen/app_margin"
    android:layout_marginRight="@dimen/app_margin">


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView">

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelpSubj"
        android:text="@string/help_problemWithCanFe"
        android:visibility="gone"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/black_john"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow"
        android:layout_marginBottom="@dimen/dimen_2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelpSubj1"
        android:visibility="gone"
        android:text="@string/help_InvolvedAccident"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/black_john"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow"
        android:layout_marginBottom="@dimen/dimen_2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelpSubj2"
        android:visibility="gone"
        android:text="@string/help_refund"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/black_john"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow"
        android:layout_marginBottom="@dimen/dimen_2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelpSubj3"
        android:visibility="gone"
        android:text="@string/help_lost_item"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/black_john"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow"
        android:layout_marginBottom="@dimen/dimen_2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelpSubj4"
        android:visibility="gone"
        android:text="@string/help_DifferentIssue"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/black_john"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow"
        android:layout_marginBottom="@dimen/dimen_2dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelpSubj5"
        android:visibility="gone"
        android:text="@string/help_unprofessional"
        android:textSize="@dimen/textSize_14sp"
        android:textColor="@color/black_john"
        android:drawableRight="@drawable/ic_arrow"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_arrow"/>


</LinearLayout>