<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/tvLookingProvider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/dimen_8dp"
        android:textSize="@dimen/textSize_16sp"
        android:textColor="@color/blueJobStatusColor"
        android:text="@string/looking_for_a_provider"/>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/grey_background_darker"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">



        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height="@dimen/dimen_150dp"
                android:id="@+id/ivPicWave"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:id="@+id/proFilePic"
                android:layout_width="@dimen/dimen_80dp"
                android:layout_height="@dimen/dimen_80dp"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:padding="1.5dp"
                android:layout_centerInParent="true"
                android:src="@drawable/register_profile_default_image"
                android:background="@drawable/circle"/>
        </RelativeLayout>


        <TextView
            android:id="@+id/tvJobPostedProName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/profile"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:textSize="@dimen/textSize_16sp"
            android:textColor="@color/black_john"
            />
        <TextView
            android:id="@+id/tvJobPostedProViewPro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_profile"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_3dp"
            android:textSize="@dimen/textSize_14sp"
            android:padding="@dimen/dimen_5dp"
            android:textColor="@color/parrotGreen"
            />
        <RelativeLayout
            android:id="@+id/rlTimerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">
                <TextView
                    android:id="@+id/tvTimerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="00 : 10 : 26"
                    android:textSize="50sp"
                    android:textColor="@color/black_john"/>
                 <TextView
                     android:id="@+id/tvProHrText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/hour"
                     android:layout_below="@id/tvTimerText"

                     />
                <TextView
                    android:id="@+id/tvProMinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/tvTimerText"
                    />
                <TextView
                    android:id="@+id/tvProSecText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:layout_below="@id/tvTimerText"
                    android:layout_alignRight="@id/tvTimerText"
                    android:layout_alignEnd="@id/tvTimerText"

                    />
            </RelativeLayout>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCancel"
            android:text="@string/cancel"
            android:textSize="@dimen/textSize_14sp"
            android:layout_marginTop="@dimen/app_margin"
            android:layout_gravity="center"
            android:background="@drawable/profile_price_bg"
            android:paddingTop="@dimen/dimen_5dp"
            android:paddingBottom="@dimen/dimen_5dp"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"

            />

    </LinearLayout>

</LinearLayout>