<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivAddressType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:layout_weight="0.45"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/dimen_2dp"
            tools:src="@drawable/circle_check_uncheck" />

        <LinearLayout
            android:id="@+id/address_text_row"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:layout_marginTop="@dimen/app_margin"
                android:text="@string/your_addresses"
                android:textSize="@dimen/textSize_14sp"
                android:textAllCaps="true"/>

            <TextView
                android:id="@+id/tvAddress1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5dp"
                android:textSize="@dimen/textSize_14sp"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginEnd="@dimen/app_margin"
                tools:text="@string/dummy_text" />

            <TextView
                android:id="@+id/tvAddress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSize_14sp"
                android:layout_marginRight="@dimen/app_margin"
                android:layout_marginEnd="@dimen/app_margin"
                tools:text="@string/dummy_distance" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_5dp"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvEditAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:padding="4dp"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/textSize_14sp"
                    android:text="@string/edit" />

                <TextView
                    android:id="@+id/tvDeleteAddress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAllCaps="true"
                    android:padding="4dp"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/textSize_14sp"
                    android:text="@string/delete" />


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_1dp"
        android:background="@color/grey_background"
        android:id="@+id/viewDivider"
        />

    <!--<ImageView
        android:id="@+id/iv_delete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/dimen_5dp"
        android:layout_marginRight="@dimen/dimen_5dp"
        android:layout_weight="0.5"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/dimen_5dp"
        android:src="@drawable/ic_delete" />-->



</LinearLayout>