<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="#FAFAFA"
    tools:context="com.localgenie.youraddress.YourAddressActivity">

    <include android:id="@+id/toolbarLayout" layout="@layout/tool_barlayout"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/rlListAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLayout"
        android:layout_above="@+id/btn_add_address">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvSavedAddress"
            android:text="@string/saved_Address"
            android:background="@color/shimmer_color"
            android:paddingLeft="@dimen/app_margin"
            android:paddingRight="@dimen/app_margin"
            android:paddingTop="@dimen/dimen_20dp"
            android:paddingBottom="@dimen/dimen_10dp"
            android:textColor="@color/grey_john"
            android:textSize="@dimen/textSize_14sp"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recyclerViewAddress"
            android:layout_below="@+id/tvSavedAddress"
            />

        <TextView
            android:id="@+id/noadressadded"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/noaddressavailable"
            android:visibility="gone" />
    </RelativeLayout>

    <TextView
        android:id="@+id/btn_add_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_10dp"
        android:background="@drawable/parrot_green_rounded_btn2"
        android:gravity="center"
        android:padding="@dimen/dimen_14dp"
        android:text="@string/add_new_address"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/textSize_14sp"/>

    <RelativeLayout
        android:id="@+id/rlListAddressEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        >
        <ImageView
            android:layout_width="@dimen/dimen_160dp"
            android:layout_height="@dimen/dimen_160dp"
            android:src="@drawable/add_address"
            android:id="@+id/ivEmatyAddress"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name" />
        <TextView
            android:id="@+id/tvAddressNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_AddressSaved"
            android:layout_below="@+id/ivEmatyAddress"
            android:layout_marginTop="@dimen/app_margin"
            android:textColor="@color/black_john"
            android:textSize="@dimen/textSize_14sp"
            android:gravity="center"
            />
    </RelativeLayout>
</RelativeLayout>
